--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
 os:
   - linux
+  - osx
 node_js:
-  - "7"
   - "8"
+  - "9"
+  - "10"
+  - "12"
 script:
   - npm run build
 after_success:
