--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "low-pass-filter",
-  "version": "0.0.2",
-  "description": "LPF. This is a audio FX.",
+  "version": "1.0.0",
+  "description": "Low pass filter.",
   "homepage": "https://github.com/rochars/low-pass-filter",
   "author": "Rafael da Silva Rocha <rocha.rafaelsilva@gmail.com>",
   "license": "MIT",
+  "main": "./dist/low-pass-filter.js",
+  "module": "./index.js",
+  "types": "./index.d.ts",
+  "engines": {
+    "node": ">=8"
+  },
   "keywords": [
     "signal",
     "audio",
@@ -19,27 +25,43 @@
     "type": "git",
     "url": "git://github.com/rochars/low-pass-filter.git"
   },
+  "bugs": {
+    "url": "https://github.com/rochars/low-pass-filter/issues"
+  },
+  "directories": {
+    "dist": "dist",
+    "externs": "externs"
+  },
+  "files": [
+    "dist",
+    "externs",
+    "index.js",
+    "index.d.ts",
+    "LICENSE",
+    "CHANGELOG.md",
+    "README.md"
+  ],
   "scripts": {
-    "lint": "jshint index.js && jshint test",
-    "test": "nyc ./node_modules/mocha/bin/_mocha test --src --recursive",
-    "test-dist": "nyc ./node_modules/mocha/bin/_mocha test --dist --recursive",
-    "coverage": "nyc report --reporter=lcov > coverage.lcov && codecov",
-    "doc": "./node_modules/.bin/jsdoc index.js -d docs -r README.md -t node_modules/docdash",
-    "pack": "webpack && npm run test-dist",
-    "build": "npm run lint && npm run pack && npm test && npm run doc"
+    "lint": "jshint index.js externs",
+    "test": "nyc ./node_modules/mocha/bin/_mocha test/src --recursive -R dot",
+    "test-umd": "node ./node_modules/mocha/bin/_mocha test/src --umd --recursive -R dot",
+    "test-dist": "npm run test-umd",
+    "pack": "npm run test && rollup -c && npm run test-dist",
+    "doc": "./node_modules/.bin/jsdoc -c .jsdocrc index.js -d docs -r README.md -t node_modules/docdash",
+    "build": "npm run lint && npm run pack && npm run doc",
+    "coverage": "nyc report --reporter=lcov > coverage.lcov && codecov"
   },
   "devDependencies": {
-    "browser-env": "^3.2.4",
-    "codecov": "^3.0.0",
-    "docdash": "^0.4.0",
-    "google-closure-compiler-js": "^20170910.0.1",
-    "jsdoc": "~3.5.5",
-    "jshint": "^2.9.5",
-    "mocha": "^3.5.3",
+    "@ampproject/rollup-plugin-closure-compiler": "^0.13.0",
+    "codecov": "^3.6.1",
+    "docdash": "^1.1.1",
+    "esm": "^3.2.25",
+    "jsdoc": "^3.6.3",
+    "jshint": "^2.10.3",
+    "mocha": "^6.2.2",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^3.2.2",
-    "webpack": "^3.8.1"
+    "nyc": "^14.1.1",
+    "rollup": "^1.27.14"
   },
-  "main": "index.js",
   "dependencies": {}
 }
